<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpProfile2">

    <TextView
        android:id="@+id/txtVwProfile"
        android:layout_width="298dp"
        android:layout_height="66dp"
        android:gravity="center"
        android:text="@string/profile"
        android:textColor="@color/titleColor"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/vwBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/vwBox"
        android:layout_width="345dp"
        android:layout_height="586dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bigcardbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.641" />


    <Button
        android:id="@+id/btnPrevious"
        android:layout_width="67dp"
        android:layout_height="28dp"
        android:background="@drawable/button"
        android:text="@string/previous"
        android:textColor="@color/btnColor"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/vwBox"
        app:layout_constraintEnd_toStartOf="@+id/btnPlay"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="@+id/vwBox"
        app:layout_constraintTop_toBottomOf="@+id/txtVwProfile"
        app:layout_constraintVertical_bias="0.222" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="67dp"
        android:layout_height="28dp"
        android:background="@drawable/button"
        android:text="@string/play_playlist"
        android:textColor="@color/btnColor"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/vwBox"
        app:layout_constraintEnd_toEndOf="@+id/vwBox"
        app:layout_constraintStart_toStartOf="@+id/vwBox"
        app:layout_constraintTop_toBottomOf="@+id/btnAddSpotify"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="66dp"
        android:layout_height="29dp"
        android:background="@drawable/button"
        android:text="@string/next"
        android:textColor="@color/btnColor"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/vwBox"
        app:layout_constraintEnd_toEndOf="@+id/vwBox"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toEndOf="@+id/btnPlay"
        app:layout_constraintTop_toBottomOf="@+id/txtVwProfile"
        app:layout_constraintVertical_bias="0.222" />

    <Button
        android:id="@+id/btnAddSpotify"
        android:layout_width="264dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/button"
        android:text="@string/add_spotify_playlist"
        android:textColor="@color/btnColor"
        app:layout_constraintBottom_toBottomOf="@+id/vwBox"
        app:layout_constraintEnd_toEndOf="@+id/vwBox"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="@+id/vwBox"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtSpotifyURL"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtCurrentlyPlaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currently_playing"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/txtCurrentSong"
        app:layout_constraintEnd_toEndOf="@+id/vwBox"
        app:layout_constraintStart_toStartOf="@+id/vwBox"
        app:layout_constraintTop_toBottomOf="@+id/btnPlay"
        app:layout_constraintVertical_bias="0.677" />

    <TextView
        android:id="@+id/txtCurrentSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/none"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="@+id/vwBox"
        app:layout_constraintEnd_toEndOf="@+id/vwBox"
        app:layout_constraintStart_toStartOf="@+id/vwBox"
        app:layout_constraintTop_toBottomOf="@+id/txtVwProfile"
        app:layout_constraintVertical_bias="0.343" />

    <EditText
        android:id="@+id/txtYoutubeURL"
        android:layout_width="270dp"
        android:layout_height="44dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_youtube_playlist_url"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/vwBox"
        app:layout_constraintEnd_toEndOf="@+id/vwBox"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/vwBox"
        app:layout_constraintTop_toBottomOf="@+id/txtCurrentSong"
        app:layout_constraintVertical_bias="0.077" />

    <EditText
        android:id="@+id/edtTxtSpotifyURL"
        android:layout_width="267dp"
        android:layout_height="45dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:hint="@string/enter_spotify_playlist_url"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/vwBox"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/vwBox"
        app:layout_constraintTop_toBottomOf="@+id/txtEnterSpotify"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnAddYoutube"
        android:layout_width="269dp"
        android:layout_height="41dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/button"
        android:text="@string/add_youtube_playlist"
        android:textColor="@color/btnColor"
        app:layout_constraintBottom_toTopOf="@+id/lnYoutube"
        app:layout_constraintEnd_toEndOf="@+id/vwBox"
        app:layout_constraintStart_toStartOf="@+id/vwBox"
        app:layout_constraintTop_toBottomOf="@+id/txtYT"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtYT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist_must_be_public"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/vwBox"
        app:layout_constraintEnd_toEndOf="@+id/vwBox"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="@+id/vwBox"
        app:layout_constraintTop_toBottomOf="@+id/txtYoutubeURL"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="141dp"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/button"
        android:text="@string/confirm"
        android:textColor="@color/btnColor"
        app:layout_constraintBottom_toBottomOf="@+id/vwBox"
        app:layout_constraintEnd_toEndOf="@+id/vwBox"
        app:layout_constraintStart_toStartOf="@+id/vwBox"
        app:layout_constraintTop_toBottomOf="@+id/lnYoutube"
        app:layout_constraintVertical_bias="0.617" />

    <LinearLayout
        android:id="@+id/lnYoutube"
        android:layout_width="271dp"
        android:layout_height="149dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.776">

        <com.google.android.youtube.player.YouTubePlayerView
            android:id="@+id/ytbPlaylist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardColor"
            android:backgroundTint="@color/cardColor" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtEnterSpotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_your_music_playlists"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="@+id/vwBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="@+id/vwBox"
        app:layout_constraintTop_toBottomOf="@+id/txtVwProfile"
        app:layout_constraintVertical_bias="0.022" />


</androidx.constraintlayout.widget.ConstraintLayout>