<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtVwProfile"
            android:layout_width="387dp"
            android:layout_height="55dp"
            android:text="@string/edit_profile"
            android:textAlignment="center"
            android:textColor="@color/titleColor"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/vwBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.787" />

        <View
            android:id="@+id/vwBox"
            android:layout_width="362dp"
            android:layout_height="630dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/bigcardbox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.869" />

        <ScrollView
            android:layout_width="348dp"
            android:layout_height="610dp"
            app:layout_constraintBottom_toBottomOf="@+id/vwBox"
            app:layout_constraintEnd_toEndOf="@+id/vwBox"
            app:layout_constraintStart_toStartOf="@+id/vwBox"
            app:layout_constraintTop_toBottomOf="@+id/txtVwProfile"
            app:layout_constraintVertical_bias="0.555">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImageView"
                    android:layout_width="152dp"
                    android:layout_height="141dp"
                    android:src="@drawable/profilebubble"
                    app:layout_constraintVertical_bias="1.0"
                    tools:ignore="MissingClass" />

                <TextView
                    android:id="@+id/txtVwUploadPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_photo" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtVwName"
                        android:layout_width="98dp"
                        android:layout_height="49dp"
                        android:gravity="center"
                        android:text="@string/name"
                        android:textColor="@color/textColor"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.399" />

                    <EditText
                        android:id="@+id/txtName"
                        android:layout_width="195dp"
                        android:layout_height="36dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/inputbox"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:inputType="text"
                        android:padding="8dp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtVwGender"
                        android:layout_width="98dp"
                        android:layout_height="49dp"
                        android:gravity="center"
                        android:text="@string/gender"
                        android:textColor="@color/textColor"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spGender"
                        android:layout_width="195dp"
                        android:layout_height="36dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/inputbox"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:inputType="text"
                        android:padding="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtVwBirthday"
                        android:layout_width="98dp"
                        android:layout_height="49dp"
                        android:gravity="center"
                        android:text="@string/birthday"
                        android:textColor="@color/textColor"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtBirthday"
                        android:layout_width="195dp"
                        android:layout_height="36dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/inputbox"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:hint="@string/ddmmyy"
                        android:padding="8dp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtVwGenres"
                        android:layout_width="96dp"
                        android:layout_height="52dp"
                        android:gravity="center"
                        android:text="@string/favorite_genre"
                        android:textColor="@color/textColor"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spGenres"
                        android:layout_width="195dp"
                        android:layout_height="36dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/inputbox"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:inputType="text"
                        android:padding="5dp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtVwArtists"
                        android:layout_width="98dp"
                        android:layout_height="49dp"
                        android:gravity="center"
                        android:text="@string/favorite_artist"
                        android:textColor="@color/textColor"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/txtArtists"
                        android:layout_width="195dp"
                        android:layout_height="36dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/inputbox"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:inputType="text"
                        android:padding="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtVwBio"
                        android:layout_width="98dp"
                        android:layout_height="49dp"
                        android:gravity="center"
                        android:text="@string/bio"
                        android:textColor="@color/textColor"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/txtBio"
                        android:layout_width="196dp"
                        android:layout_height="84dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/biginputbox"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:inputType="textMultiLine"
                        android:padding="8dp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/edtTxtSpotifyURL"
                    android:layout_width="267dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="1dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/enter_spotify_playlist_url"
                    android:inputType="text"
                    android:paddingRight="10dp" />

                <Button
                    android:id="@+id/btnAddSpotify"
                    android:layout_width="264dp"
                    android:layout_height="36dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/button"
                    android:text="@string/add_spotify_playlist"
                    android:textColor="@color/btnColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10sp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:showDividers="middle">

                    <Button
                        android:id="@+id/btnPrevious"
                        android:layout_width="67dp"
                        android:layout_height="28dp"
                        android:background="@drawable/button"
                        android:padding="8dp"
                        android:text="@string/previous"
                        android:textColor="@color/btnColor"
                        android:textSize="10dp" />

                    <Button
                        android:id="@+id/btnPlay"
                        android:layout_width="67dp"
                        android:layout_height="28dp"
                        android:background="@drawable/button"
                        android:text="@string/play_playlist"
                        android:textColor="@color/btnColor"
                        android:textSize="10dp" />

                    <Button
                        android:id="@+id/btnNext"
                        android:layout_width="66dp"
                        android:layout_height="29dp"
                        android:background="@drawable/button"
                        android:text="@string/next"
                        android:textColor="@color/btnColor"
                        android:textSize="10dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtCurrentlyPlaying"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currently_playing"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/txtCurrentSong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/none"
                    android:textColor="@color/textColor" />

                <EditText
                    android:id="@+id/txtYoutubeURL"
                    android:layout_width="270dp"
                    android:layout_height="44dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/enter_youtube_playlist_url"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/txtYT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/playlist_must_be_public"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/btnAddYoutube"
                    android:layout_width="269dp"
                    android:layout_height="41dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/button"
                    android:text="@string/add_youtube_playlist"
                    android:textColor="@color/btnColor" />

                <LinearLayout
                    android:id="@+id/lnYoutube"
                    android:layout_width="271dp"
                    android:layout_height="149dp"
                    android:orientation="vertical">

                    <fragment
                        android:id="@+id/ytbPlaylist"
                        android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/cardColor"
                        android:backgroundTint="@color/cardColor" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnConfirm"
                    android:layout_width="141dp"
                    android:layout_height="44dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/button"
                    android:text="@string/confirm"
                    android:textColor="@color/btnColor" />
            </LinearLayout>


        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/btnColor"
        app:itemTextColor="@color/navyBlue"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>