<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtVwSettings"
            android:layout_width="298dp"
            android:layout_height="66dp"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/titleColor"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/vwBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.804" />

        <View
            android:id="@+id/vwBox"
            android:layout_width="348dp"
            android:layout_height="233dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/cardbox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.209" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="284dp"
            android:layout_height="71dp"
            android:background="@drawable/button"
            android:text="@string/delete_account"
            android:textColor="@color/btnColor"
            app:layout_constraintBottom_toBottomOf="@+id/vwBox"
            app:layout_constraintEnd_toEndOf="@+id/vwBox"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/vwBox"
            app:layout_constraintTop_toTopOf="@+id/vwBox"
            app:layout_constraintVertical_bias="0.187" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="284dp"
            android:layout_height="71dp"
            android:background="@drawable/button"
            android:text="@string/logout"
            android:textColor="@color/btnColor"
            app:layout_constraintBottom_toBottomOf="@+id/vwBox"
            app:layout_constraintEnd_toEndOf="@+id/vwBox"
            app:layout_constraintStart_toStartOf="@+id/vwBox"
            app:layout_constraintTop_toTopOf="@+id/vwBox"
            app:layout_constraintVertical_bias="0.783" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/btnColor"
        app:itemTextColor="@color/navyBlue"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>